# NJLICRenderer

./: .gitignore  BackgroundRenderer.cpp  BitmapFont.cpp  CMakeLists.txt  Camera.cpp  Camera2.cpp  DebugDrawer.cpp  Geometry.cpp  MaterialProperty.cpp  MeshGeometry.cpp  Node.cpp  README.md  Scene.cpp  Shader.cpp  SphereGeometry.cpp  SpriteGeometry.cpp  Util.cpp  nlohmann_json.cmake.in  sdl.cmake.in
cmake/: configure.cmake  glm.cmake.in  nlohmann_json.cmake.in  sdl.cmake.in
include/: BackgroundRenderer.h  BitmapFont.h  Camera.h  Camera2.h  DebugDrawer.h  Geometry.h  MaterialProperty.h  MeshGeometry.h  Node.h  Scene.h  Shader.h  SphereGeometry.h  SpriteGeometry.h  Util.h  colors.html  debug_draw.hpp  library.h
platform/macos/: CMakeLists.txt  GraphicsPlatform.h
platform/macos/test/: CMakeLists.txt
platform/macos/test/cpp/: CMakeLists.txt
src/: BackgroundRenderer.cpp  BitmapFont.cpp  Camera.cpp  Camera2.cpp  DebugDrawer.cpp  Geometry.cpp  MaterialProperty.cpp  MeshGeometry.cpp  Scene.cpp  Shader.cpp  SphereGeometry.cpp  SpriteGeometry.cpp  Util.cpp
test/: TestColor.cpp  TestColor.h  TestDebugDrawer.cpp  TestDebugDrawer.h  TestRender.cpp  TestRender.h
